--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
   <link rel="import" href="components/polymer/polymer.html">
   <link rel="import" href="components/core-drawer-panel/core-drawer-panel.html">
   <link rel="import" href="components/core-header-panel/core-header-panel.html">
+  <link rel="import" href="components/paper-elements/paper-elements.html">
+  <link rel="import" href="components/core-icon/core-icon.html">
   <link rel="import" href="components/sc-header/sc-header.html">
   <link rel="import" href="components/sc-search/sc-search.html">
   <link rel="import" href="components/sc-navbar/sc-navbar.html">
@@ -31,14 +33,21 @@
             </div>
         </div>
         <!-- App context mini-header: END -->
-        <sc-navbar username="horacioibrahim" online="true" avatar="http://api.randomuser.me/portraits/thumb/women/79.jpg"></sc-navbar>
+        <sc-navbar></sc-navbar>
       </core-header-panel>
     </div>
     <div main>
       <core-header-panel>
-        <sc-search url="search_results.json"></sc-search>
+        <sc-search></sc-search>
         <sc-header></sc-header>
-        <div>Content goes here...</div>
+        <sc-timeline></sc-timeline>
+        <div id="inputComments">
+          Aqui
+          <paper-icon-button icon="communication:chat" on-tap={{toogleMenu}}></paper-icon-button>
+          <paper-input-decorator label="Qual ideia que pode resolver um problema...">
+            <input id="comment" is="core-input" name="c"  value="">
+          </paper-input-decorator>          
+        </div>
       </core-header-panel>
     </div>
   </core-drawer-panel>
