--- a/src/build.html
+++ b/src/build.html
@@ -35,6 +35,7 @@
                 <img src="assets/img/logo_60.png">
               </span>
               <span class="appname">SisComando</span>
+              <span class="beta">beta</span>
             </div>
         </div>
         <!-- App context mini-header: END -->
